--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<h1>ola</h1>
+<div class="container-fluid mt-1">
+    <div class="container">
+        <app-nav></app-nav>
+    </div>
+</div>
+
+<div class="container content-home">
+    <router-outlet></router-outlet>
+</div>
