--- a/src/app/departamento-fiscal/departamento-fiscal/departamento-fiscal.component.html
+++ b/src/app/departamento-fiscal/departamento-fiscal/departamento-fiscal.component.html
@@ -1,4 +1,4 @@
 <div class="container">
     <img src="/assets/GIF/gif.gif" alt="">
-    <p>Página de Departamento Fiscal em Contrução...</p>
+    <p>Página de Departamento Fiscal em Construção...</p>
 </div>
