--- a/src/app/administracao/administracao/administracao.component.html
+++ b/src/app/administracao/administracao/administracao.component.html
@@ -1,4 +1,4 @@
 <div class="container">
     <img src="/assets/GIF/gif.gif" alt="">
-    <p>Página de Administração em Contrução...</p>
+    <p>Página de Administração em Construção...</p>
 </div>
