--- a/src/app/contabilidade/contabilidade/contabilidade.component.html
+++ b/src/app/contabilidade/contabilidade/contabilidade.component.html
@@ -1,4 +1,4 @@
 <div class="container">
     <img src="/assets/GIF/gif.gif" alt="">
-    <p>Página de Contabilidade em Contrução...</p>
+    <p>Página de Contabilidade em Construção...</p>
 </div>
