--- a/src/app/departamento-pessoal/departamento-pessoal/departamento-pessoal.component.html
+++ b/src/app/departamento-pessoal/departamento-pessoal/departamento-pessoal.component.html
@@ -1,4 +1,4 @@
 <div class="container">
     <img src="/assets/GIF/gif.gif" alt="">
-    <p>Página de Departamento Pessoal em Contrução...</p>
+    <p>Página de Departamento Pessoal em Construção...</p>
 </div>
