--- a/src/app/papelaria/papelaria/papelaria.component.html
+++ b/src/app/papelaria/papelaria/papelaria.component.html
@@ -1,4 +1,4 @@
 <div class="container">
     <img src="/assets/GIF/gif.gif" alt="">
-    <p>Página de Papelaria em Contrução...</p>
+    <p>Página de Papelaria em Construção...</p>
 </div>
