--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,9 @@
 
 <div class="container content-home">
     <router-outlet></router-outlet>
+    <div href="https://api.whatsapp.com/send?phone=5511995322671" class="whatsapp">
+        <a href="https://api.whatsapp.com/send?phone=5511995322671" target="_blank">
+            <i class='bx bxl-whatsapp'></i>
+        </a>
+    </div>
 </div>
