--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,44 +1,96 @@
 <div class="home mt-5">
     <div class="row">
-        <div class="col-lg-9">
+        <div class="col-lg-8">
             <div class="hero-text">
                 <h2>
                     Abrimos sua empresa na Capital e <br>
-                    Interior de São Paulo com rapidez e <br>
+                    Interior de São Paulo com rapidez e 
                     segurança.
                 </h2>
             </div>
             <div class="hero-text-confirm">
                 <div class="text">
-                    <div class="img">
-                        <img src="/assets/icons/Done.png" alt="">
-                    </div>
-                    <div class="text-img">
-                        <p>Planos de acordo com a sua preferência</p>
-                    </div>
+                        <p>Nossa empresa se compromete a contar com profissionais altamente capacitados e adotar procedimentos que busquem constantemente a modernização e a globalização de nossos serviços.</p>
                 </div>
-                <div class="text">
-                    <img src="/assets/icons/Done.png" alt="">
-                    <p>Certidões junto à receita federal</p>
-                </div>
-                <div class="text">
-                    <img src="/assets/icons/Done.png" alt="">
-                    <p>Regularização de pendências: como débito, certidões, atendimento a fiscalizações e intimações, alterações e baixa de empresas em geral</p>
-                </div>
-                <div class="text">
-                    <img src="/assets/icons/Done.png" alt="">
-                    <p>Você pode ser atendido: por telefone, WhatsApp, ou e-mail</p>
-                </div>
+            </div>
 
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="card">
+                        <div class="title">
+                            <p>Abertura e encerramento de empresas</p>
+                        </div>
+                        <p>
+                            Empresa 100% regularizada com mínimo de imposto
+                            Cuidamos de todo o processo e te orientamos quanto à documentação 
+                        </p>
+                        <div class="link">
+                            <a href="#">Abir ou fechar empresa</a>
+                            <i class='bx bx-right-arrow-alt'></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card">
+                        <div class="title">
+                            <p>Abertura e encerramento de empresas</p>
+                        </div>
+                        <p>
+                            Empresa 100% regularizada com mínimo de imposto
+                            Cuidamos de todo o processo e te orientamos quanto à documentação 
+                        </p>
+                        <div class="link">
+                            <a href="#">Abir ou fechar empresa</a>
+                            <i class='bx bx-right-arrow-alt'></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card">
+                        <div class="title">
+                            <p>Abertura e encerramento de empresas</p>
+                        </div>
+                        <p>
+                            Empresa 100% regularizada com mínimo de imposto
+                            Cuidamos de todo o processo e te orientamos quanto à documentação 
+                        </p>
+                        <div class="link">
+                            <a href="#">Abir ou fechar empresa</a>
+                            <i class='bx bx-right-arrow-alt'></i>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="hero-text-btn">
                 <button>Saiba mais...</button>
             </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-4">
             <div class="imagem">
-                <img src="/assets/source/persona.png" alt="">
+                <!-- <img src="/assets/source/35242.jpg" alt="">  -->
             </div>
+        </div>
+    </div>
+</div>
+
+<!-- quem somos?  -->
+<div class="row mt-5">
+    <div class="quem-somos col-lg-7">
+            <div class="title">
+                <p>Quem somos?</p>
+                <div></div>
+            </div>
+            <div class="content">
+                <p>
+                    Lugar dos Negócios é uma empresa com sede em Itaquaquecetuba, com continua prestação de serviços desde 2000.
+                    Atuando junto as principais repartições públicas, federais, estaduais e municipais.
+                    Especializada na assessoria de documentações em geral, tem como objetivo, a comodidade, segurança e rapidez nos serviços prestados, minimizando a burocracia documentacional das empresas preocupando-se em atender a legislação vigente a fim de proporcionar aos nossos clientes maior clareza e tranquilidade
+                </p>
+            </div>
+    </div>
+    <div class="col-lg-5">
+        <div class="imagem-quem-somos">
+            <img src="/assets/source/OBJECTS.png" alt="">
         </div>
     </div>
 </div>
