--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -17,11 +17,7 @@
         color: var(--txt-color);
         font-family: 'Roboto', sans-serif;
         font-weight: 500;
-      }
-  
-      img {
-        margin-bottom: 1rem;
-        margin-right: 10px;
+        font-size: 13pt;
       }
     }
   
@@ -33,15 +29,15 @@
   .hero-text-btn {
     button {
       height: auto;
-      width: auto;
+      width: 20%;
       margin-top: 1rem;
       border: none;
       outline: none;
-      font-size: 10pt;
+      font-size: 12pt;
       padding: 0.8rem;
       background: var(--bg-button);
       color: var(--text-color-white);
-      border-radius: 10px;
+      border-radius: 5px;
       box-shadow: 1px 1px 10px rgba(148, 140, 140, 0.548);
       transition: all 0.3s ease-in-out;
     }
@@ -76,3 +72,79 @@
     }
   }
   
+
+  .card{
+    border: none;
+    background: #ffffff5e;
+    padding: 0.60rem;
+    box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.123);
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+
+    &:hover{
+      transform: translateY(-10px);
+    }
+    .title{
+      height: auto;
+      width: 100%;
+      font-weight: 600;
+      font-size: 13pt;
+    }
+
+    .link{
+      height: auto;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: left;
+
+      a{
+        text-decoration: none;
+        color: #157ffb;
+      }
+
+      i{
+        font-size: 16pt;
+        margin-top: 1px;
+        margin-left: 5px;
+        color: #157ffb;
+      }
+    }
+  }
+
+  // quem somos 
+
+  .quem-somos{
+    .title{
+      p{
+        color: var(--txt-color);
+        font-size: 25pt;
+        font-weight: 600;
+      }
+
+      div{
+        border-radius: 10px;
+        height: 5px;
+        width: 50px;
+        background: var(--bg-button);
+      }
+    }
+
+    .content{
+      font-size: 15pt;
+      color: var(--txt-color);
+    }
+  }
+
+  .imagem-quem-somos{
+    height: auto;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img{
+      height: auto;
+      width: 60%;
+    }
+  }
