--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,25 +1,25 @@
-.whatsapp{
-    right: 3rem;
-    bottom: 3rem;
-    position: fixed;
-    height: 60px;
-    width: 60px;
-    background: var(--bg-button);
-    border-radius: 50%;
-    box-shadow: 1px 1px 10px rgba(148, 140, 140, 0.548);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;     
-    transition: all 0.3s ease-in-out;
+// .whatsapp{
+//     right: 3rem;
+//     bottom: 3rem;
+//     position: fixed;
+//     height: 60px;
+//     width: 60px;
+//     background: var(--bg-button);
+//     border-radius: 50%;
+//     box-shadow: 1px 1px 10px rgba(148, 140, 140, 0.548);
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     cursor: pointer;     
+//     transition: all 0.3s ease-in-out;
 
-    &:hover{
-        background:  #002869ea;
-        transform: translateY(-5px);
-    }
-    i{
-        z-index: 1;
-        color: white;
-        font-size: 25pt;
-    }
-}
+//     &:hover{
+//         background:  #002869ea;
+//         transform: translateY(-5px);
+//     }
+//     i{
+//         z-index: 1;
+//         color: white;
+//         font-size: 25pt;
+//     }
+// }
