--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -14,7 +14,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-lg-4">
                     <div class="card">
                         <div class="title">
@@ -60,9 +60,19 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="hero-text-btn">
-                <button>Saiba mais...</button>
+                <!-- <button>Saiba mais...</button> -->
+                <div class="whatsap">
+                        <a href="">
+                            <i class='bx bxl-whatsapp'></i>
+                        </a>
+                </div>
+                <div class="instragram">
+                    <a href="">
+                        <i class='bx bxl-instagram' ></i>
+                    </a>
+                </div>
             </div>
         </div>
         <div class="col-lg-4">
@@ -75,22 +85,32 @@
 
 <!-- quem somos?  -->
 <div class="row mt-5">
-    <div class="quem-somos col-lg-7">
+    <div class="quem-somos col-lg-12">
             <div class="title">
-                <p>Quem somos?</p>
+                <p>Soluções para o seu negócio! <br> O que você precisa?</p>
                 <div></div>
             </div>
             <div class="content">
-                <p>
-                    Lugar dos Negócios é uma empresa com sede em Itaquaquecetuba, com continua prestação de serviços desde 2000.
-                    Atuando junto as principais repartições públicas, federais, estaduais e municipais.
-                    Especializada na assessoria de documentações em geral, tem como objetivo, a comodidade, segurança e rapidez nos serviços prestados, minimizando a burocracia documentacional das empresas preocupando-se em atender a legislação vigente a fim de proporcionar aos nossos clientes maior clareza e tranquilidade
-                </p>
+               <p>
+                Olá!
+                Estamos passando por uma fase de mudanças, mas queremos assegurar que estamos disponíveis em todos os nossos canais para oferecer um atendimento excepcional a você! Não perca tempo, basta clicar e nos informar suas necessidades. Estamos prontos para te atender.
+                Enfrentando problemas com contabilidade? Preocupado com impostos elevados? Deseja informações sobre o MEI? Precisa de ajuda com alterações, regularizações ou baixas? Ou talvez precise de serviços relacionados à segurança do trabalho, como PGR ou PCMSO? Estamos aqui para ajudar! Clique e converse diretamente com nosso especialista.
+                Nossos serviços abrangem diversas áreas, incluindo: <br>
+                - Serviços Contábeis, atendendo a todas as suas demandas; <br>
+                - Serviços em Segurança do Trabalho, cumprindo todas as normas regulamentadoras; <br>
+                - Oferecemos Certificado Digital, tudo de forma conveniente, sem precisar sair de sua casa ou escritório; <br>
+                - Se você possui um imóvel e quer vender ou colocá-lo para alugar, ou até mesmo precisa de assistência para elaborar um contrato de aluguel, conte conosco para cuidar de tudo. <br>
+                - Em breve, também disponibilizaremos assessoria jurídica para auxiliá-lo em questões legais. <br>
+                Estamos empenhados em fornecer um serviço de alta qualidade e estamos ansiosos para atendê-lo de forma eficiente e confiável. Não hesite em entrar em contato conosco através dos nossos canais de comunicação. <br>
+                Agradecemos a confiança em nossa empresa e esperamos ser a solução para suas necessidades. <br>
+                Atenciosamente,
+                [Leandro/Lugar Dos Negócios]
+               </p>
             </div>
     </div>
-    <div class="col-lg-5">
+    <!-- <div class="col-lg-5">
         <div class="imagem-quem-somos">
             <img src="/assets/source/OBJECTS.png" alt="">
         </div>
-    </div>
+    </div> -->
 </div>
