--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -63,11 +63,14 @@
             </div> -->
             <div class="hero-text-btn">
                 <!-- <button>Saiba mais...</button> -->
-                <div class="whatsap">
-                        <a href="">
+                <a href="https://api.whatsapp.com/send?phone=5511995322671" target="_blank">
+                    <div class="whatsap">
+                        <a href="https://api.whatsapp.com/send?phone=5511995322671" target="_blank">
                             <i class='bx bxl-whatsapp'></i>
                         </a>
-                </div>
+                    </div>
+                </a>
+                
                 <div class="instragram">
                     <a href="">
                         <i class='bx bxl-instagram' ></i>
